# armnn-bench

./: .clang-format  CMakeLists.txt  main.cpp
